<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    app:chainUseRtl="true">

    <TextView
        android:id="@+id/tv_customDialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_select_image_action"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_customDialog_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:drawableTop="@drawable/ic_photo_camera"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_customDialog_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_customDialog_gallery"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/lbl_camera"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_customDialog_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:gravity="center"
        android:drawableTop="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_customDialog_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:text="@string/lbl_gallery"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>